--- a/index.html
+++ b/index.html
@@ -4,8 +4,55 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>[Name] [Surname] - Recruitment task</title>
+    <title>Dawid Plawecki - Recruitment task</title>
+    <link rel="stylesheet" href="src/css/main.css">
 </head>
 <body>
+<section>
+    <div class="overlay"></div>
+    <div class="whole">
+    <div class="container_one">
+    <div class="container_two">
+        <div class="photo">
+            <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg">
+        </div>
+        <div class="text">
+            <div class="heading">
+                <h1>Lorem Ipsum</h1>
+                <div class="content">
+                  <div class="article">
+                    <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+                    </div>
+                    <div class="text_button">
+                        <button>Button</button>
+                    </div>
+                  </div>
+                 </div>
+            </div>
+            </div>
+        </div>
+        <div class="container_one">
+            <div class="container_two">
+            <div class="photo">
+                <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg">
+            </div>
+            <div class="text">
+                <div class="heading">
+                    <h1>Lorem Ipsum</h1>
+                    <div class="content">
+                      <div class="article">
+                        <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+                        </div>
+                        <div class="text_button">
+                            <button>Button</button>
+                        </div>
+                      </div>
+                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
 
 </body>
